--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^7.1.2",
     "connected-react-router": "^6.6.1",
     "history": "^4.10.1",
+    "node-sass": "^4.13.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
@@ -15,7 +16,8 @@
     "react-scripts": "3.3.0",
     "redux": "^4.0.5",
     "redux-i18n": "^1.5.19",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "reset-css": "^5.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
