--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "node-sass": "^4.13.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-facebook-login": "^4.1.1",
     "react-ionicons": "2.0.2",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
