--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
+    "react-textarea-autosize": "^7.1.2",
     "redux": "^4.0.5",
     "redux-i18n": "^1.5.19",
     "redux-thunk": "^2.3.0",
