--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "react-ionicons": "2.0.2",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
+    "react-router-redux": "^4.0.8",
     "react-scripts": "3.3.0",
     "react-textarea-autosize": "^7.1.2",
     "redux": "^4.0.5",
